deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: theater-msa
  labels:
    name: theater-msa
    environment: production
    istio-injection: enabled
